--- a/content/resources/3_46_quiz_2.md
+++ b/content/resources/3_46_quiz_2.md
@@ -4,6 +4,7 @@ description: 'This file contains quize 2 for this course based upon bandgap: AlP
   GaAs, bandgap: GaAs, ZnSe, dielectric constant and electron mobility.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/3-46-photonic-materials-and-devices-spring-2006/2dd956c899e968aff76875e21ac1d841_3_46_quiz_2.pdf
 file_type: application/pdf
+parent_uid: 707c014a-09a4-981b-6d38-0b6edc99128a
 resourcetype: Document
 title: 3_46_quiz_2.pdf
 uid: 2dd956c8-99e9-68af-f768-75e21ac1d841
