--- a/content/resources/3_46_quiz_3.md
+++ b/content/resources/3_46_quiz_3.md
@@ -5,6 +5,7 @@ description: This file contains quizes 3 for this course based upon plane (linea
   light.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/3-46-photonic-materials-and-devices-spring-2006/63718a20f02030c24c6f4044b74a767d_3_46_quiz_3.pdf
 file_type: application/pdf
+parent_uid: 707c014a-09a4-981b-6d38-0b6edc99128a
 resourcetype: Document
 title: 3_46_quiz_3.pdf
 uid: 63718a20-f020-30c2-4c6f-4044b74a767d
