--- a/content/resources/3_46_quiz_4.md
+++ b/content/resources/3_46_quiz_4.md
@@ -4,6 +4,7 @@ description: This file contains quize 4 for this course based upon the photonic 
   waveguide.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/3-46-photonic-materials-and-devices-spring-2006/ce9950749dfeeec07ab24f3d1729eaaf_3_46_quiz_4.pdf
 file_type: application/pdf
+parent_uid: 707c014a-09a4-981b-6d38-0b6edc99128a
 resourcetype: Document
 title: 3_46_quiz_4.pdf
 uid: ce995074-9dfe-eec0-7ab2-4f3d1729eaaf
