--- a/content/resources/3_46_quiz_5.md
+++ b/content/resources/3_46_quiz_5.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This file contains quize 5 for this course based upon Si and GaAs absorption.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/3-46-photonic-materials-and-devices-spring-2006/e257061bb658934e80a4acae4b2b6e06_3_46_quiz_5.pdf
 file_type: application/pdf
+parent_uid: 707c014a-09a4-981b-6d38-0b6edc99128a
 resourcetype: Document
 title: 3_46_quiz_5.pdf
 uid: e257061b-b658-934e-80a4-acae4b2b6e06
